@@ -1,7 +1,10 @@
 1.1.3dev
  - added static declaration + code comments
  - changed incorrect db name case on upgrade
-
+ - fixed incorrect form closure when only one language enabled in dash settings
+ - fixed changed unique index from lang to local on MultilingualPageRelations
+ - fixed incomplete object in session problem by storing locale as string as apposed to Zend_Locale
+ 
 # 1.1.2
 - Added exclude from internationalization copy custom attribute
 
